# parallel-vertex-clustering

./: CMakeLists.txt  LICENSE  README.md
cpp/: FileSystem.cpp  Geometry3D.cpp  KDTreeFlann.cpp  MeshBase.cpp  ProgressBar.cpp  TriangleMesh.cpp  TriangleMeshIO.cpp  TriangleMeshPWeld.cpp
filePLY/: CMakeLists.txt  FilePLY.cpp
include/geometry/: Geometry.h  Geometry3D.h  KDTreeFlann.h  MeshBase.h  TriangleMesh.h  TriangleMeshPWeld.h
include/io/: TriangleMeshIO.h
include/pipelines/registration/: Feature.h
include/utility/: Eigen.h  ProgressReporters.h
rply/: CMakeLists.txt  rply.c
scripts/: calculate-epsilon-values.py  convert-to-ply.py  extract.py  makeCSV.py
src/: CMakeLists.txt  find-eps.cpp  main.cpp
